--- a/whiteboard/MainWindow.xib
+++ b/whiteboard/MainWindow.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4488.2" systemVersion="12E3067" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E3067" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3715.3"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UIApplication">
@@ -29,7 +29,7 @@
         <tabBarController definesPresentationContext="YES" id="DOC-eU-kOs">
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
-            <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <tabBar key="tabBar" contentMode="scaleToFill" id="zYr-IP-hlT">
@@ -50,10 +50,6 @@
                     </navigationBar>
                     <viewControllers>
                         <viewController nibName="MainFeedViewController" id="At9-7X-3wX" customClass="MainFeedViewController">
-                            <layoutGuides>
-                                <viewControllerLayoutGuide type="top" id="1nU-ZA-4pv"/>
-                                <viewControllerLayoutGuide type="bottom" id="uZU-2u-DcW"/>
-                            </layoutGuides>
                             <navigationItem key="navigationItem" title="Root View Controller" id="a6C-py-0D6"/>
                             <nil key="simulatedStatusBarMetrics"/>
                             <nil key="simulatedTopBarMetrics"/>
