--- a/whiteboard/Views/WBPhotoTimelineSectionHeaderView.xib
+++ b/whiteboard/Views/WBPhotoTimelineSectionHeaderView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E55" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12E3067" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
@@ -40,12 +40,10 @@
                                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Yc0-cr-01p" userLabel="Button - Like">
                                     <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" image="buttonLike">
+                                    <state key="normal">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
-                                    <state key="selected" image="buttonLikeSelected"/>
-                                    <state key="highlighted" image="buttonLikeSelected"/>
                                     <connections>
                                         <action selector="likesButtonPressed:" destination="ZZn-RL-Gty" eventType="touchUpInside" id="oxJ-vc-RpD"/>
                                     </connections>
@@ -67,7 +65,7 @@
                                 <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="zv8-qS-fm5" userLabel="Button - Comment">
                                     <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" image="iconComment">
+                                    <state key="normal">
                                         <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                     </state>
@@ -102,10 +100,4 @@
             </connections>
         </view>
     </objects>
-    <resources>
-        <image name="buttonLike" width="29" height="29"/>
-        <image name="buttonLikeSelected" width="29" height="29"/>
-        <image name="buttonLikeSelected" width="29" height="29"/>
-        <image name="iconComment" width="29" height="28"/>
-    </resources>
 </document>
