WIP: adding colors to the plist

--- a/whiteboard/MainWindow.xib
+++ b/whiteboard/MainWindow.xib
@@ -29,7 +29,7 @@
         <tabBarController definesPresentationContext="YES" id="DOC-eU-kOs" customClass="WBTabBarController">
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
-            <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+            <nil key="simulatedBottomBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <tabBar key="tabBar" contentMode="scaleToFill" id="zYr-IP-hlT">
