--- a/whiteboard/Controllers/WBLoginViewController.xib
+++ b/whiteboard/Controllers/WBLoginViewController.xib
@@ -43,7 +43,7 @@
                     <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpW-Ok-3qo">
-                    <rect key="frame" x="90" y="259" width="140" height="50"/>
+                    <rect key="frame" x="90" y="242" width="140" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Ok">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -60,6 +60,16 @@
                     </state>
                     <connections>
                         <action selector="registerAction:" destination="-1" eventType="touchUpInside" id="ebj-D2-r0e"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lot-Rb-PGu">
+                    <rect key="frame" x="48" y="321" width="225" height="49"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Login With Facebook">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="loginWithFacebookAction:" destination="-1" eventType="touchUpInside" id="3as-Um-Bd7"/>
                     </connections>
                 </button>
             </subviews>
