--- a/whiteboard/Controllers/WBSignupViewController.xib
+++ b/whiteboard/Controllers/WBSignupViewController.xib
@@ -13,13 +13,17 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="1">
+        <view contentMode="scaleToFill" id="1" customClass="KeyboardAnimationView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zr2-fh-ueV">
-                    <rect key="frame" x="93" y="264" width="134" height="44"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zr2-fh-ueV">
+                    <rect key="frame" x="20" y="243" width="140" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="3G8-8w-aoj"/>
+                        <constraint firstAttribute="width" constant="140" id="Nbg-oE-2on"/>
+                    </constraints>
                     <state key="normal" title="Signup">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -27,45 +31,48 @@
                         <action selector="signupAction:" destination="-1" eventType="touchUpInside" id="eWp-cx-xWy"/>
                     </connections>
                 </button>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7AP-gb-3RS">
-                    <rect key="frame" x="34" y="91" width="252" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7AP-gb-3RS">
+                    <rect key="frame" x="34" y="84" width="252" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="next"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oGG-bK-isb">
-                    <rect key="frame" x="34" y="158" width="252" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oGG-bK-isb">
+                    <rect key="frame" x="34" y="144" width="252" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                 </textField>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sdx-5P-9qA">
-                    <rect key="frame" x="34" y="225" width="252" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sdx-5P-9qA">
+                    <rect key="frame" x="34" y="204" width="252" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="done" secureTextEntry="YES"/>
                 </textField>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvy-Wl-nxt">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvy-Wl-nxt">
                     <rect key="frame" x="42" y="62" width="117" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="117" id="Gk1-lF-rrH"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="za6-af-g1k">
-                    <rect key="frame" x="42" y="129" width="117" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="za6-af-g1k">
+                    <rect key="frame" x="42" y="122" width="117" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixf-Jc-27d">
-                    <rect key="frame" x="42" y="196" width="117" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ixf-Jc-27d">
+                    <rect key="frame" x="42" y="182" width="117" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3vI-Hb-bg2">
-                    <rect key="frame" x="129" y="518" width="62" height="30"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3vI-Hb-bg2">
+                    <rect key="frame" x="160" y="243" width="140" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Log in">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -76,6 +83,31 @@
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="za6-af-g1k" firstAttribute="leading" secondItem="Jvy-Wl-nxt" secondAttribute="leading" id="12U-Q2-w6E"/>
+                <constraint firstItem="ixf-Jc-27d" firstAttribute="leading" secondItem="za6-af-g1k" secondAttribute="leading" id="1Ar-4i-hrd"/>
+                <constraint firstItem="7AP-gb-3RS" firstAttribute="trailing" secondItem="oGG-bK-isb" secondAttribute="trailing" id="28F-lz-CXP"/>
+                <constraint firstItem="ixf-Jc-27d" firstAttribute="top" secondItem="oGG-bK-isb" secondAttribute="bottom" constant="8" symbolic="YES" id="3Fc-bN-LAZ"/>
+                <constraint firstItem="Jvy-Wl-nxt" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="42" id="9OB-O7-oeJ"/>
+                <constraint firstItem="za6-af-g1k" firstAttribute="top" secondItem="7AP-gb-3RS" secondAttribute="bottom" constant="8" symbolic="YES" id="D9x-ZM-1hI"/>
+                <constraint firstItem="za6-af-g1k" firstAttribute="trailing" secondItem="ixf-Jc-27d" secondAttribute="trailing" id="DMq-tN-C7r"/>
+                <constraint firstItem="oGG-bK-isb" firstAttribute="leading" secondItem="7AP-gb-3RS" secondAttribute="leading" id="Ikb-uo-drP"/>
+                <constraint firstItem="3vI-Hb-bg2" firstAttribute="top" secondItem="zr2-fh-ueV" secondAttribute="top" id="JTr-EU-Q7u"/>
+                <constraint firstItem="7AP-gb-3RS" firstAttribute="top" secondItem="Jvy-Wl-nxt" secondAttribute="bottom" constant="1" id="Po0-TK-qs4"/>
+                <constraint firstItem="oGG-bK-isb" firstAttribute="trailing" secondItem="Sdx-5P-9qA" secondAttribute="trailing" id="QTZ-jz-tbu"/>
+                <constraint firstItem="Jvy-Wl-nxt" firstAttribute="trailing" secondItem="za6-af-g1k" secondAttribute="trailing" id="RAU-np-q5p"/>
+                <constraint firstItem="Jvy-Wl-nxt" firstAttribute="top" secondItem="1" secondAttribute="top" constant="62" id="RvB-bE-YdN"/>
+                <constraint firstItem="3vI-Hb-bg2" firstAttribute="leading" secondItem="zr2-fh-ueV" secondAttribute="trailing" id="bXS-aV-p9q"/>
+                <constraint firstItem="Sdx-5P-9qA" firstAttribute="top" secondItem="ixf-Jc-27d" secondAttribute="bottom" constant="1" id="d3g-w1-jDZ"/>
+                <constraint firstItem="Sdx-5P-9qA" firstAttribute="leading" secondItem="oGG-bK-isb" secondAttribute="leading" id="eEA-ts-HPh"/>
+                <constraint firstAttribute="trailing" secondItem="3vI-Hb-bg2" secondAttribute="trailing" constant="20" symbolic="YES" id="eUi-4H-H2a"/>
+                <constraint firstItem="zr2-fh-ueV" firstAttribute="top" secondItem="Sdx-5P-9qA" secondAttribute="bottom" constant="9" id="g8X-J7-s3z"/>
+                <constraint firstItem="zr2-fh-ueV" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="gco-ox-GN4"/>
+                <constraint firstItem="oGG-bK-isb" firstAttribute="top" secondItem="za6-af-g1k" secondAttribute="bottom" constant="1" id="jX4-v5-a9s"/>
+                <constraint firstItem="7AP-gb-3RS" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="34" id="m1r-yk-YEu"/>
+                <constraint firstItem="Sdx-5P-9qA" firstAttribute="centerX" secondItem="1" secondAttribute="centerX" id="usl-xD-1D9"/>
+                <constraint firstItem="zr2-fh-ueV" firstAttribute="bottom" secondItem="3vI-Hb-bg2" secondAttribute="bottom" id="yWS-uq-jCm"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
